// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > calls the onClick function when clicked 1`] = `
<button
  class="ds-flex ds-items-center ds-gap-4 ds-select-none ds-group ds-text-button-md ds-px-6 ds-rounded-[30px] ds-text-black ds-bg-bg-gray hover:ds-text-accent focus-visible:ds-text-accent active:ds-bg-accent focus-visible:ds-outline-accent focus-visible:ds-outline focus-visible:ds-outline-[3px] focus-visible:ds-outline-offset-[1.5px] active:ds-text-white active:ds-outline-0"
  type="button"
>
  <span
    class="group-hover:ds-underline group-active:ds-no-underline group-focus-visible:ds-no-underline ds-py-[10px]"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button as disabled 1`] = `
<button
  class="ds-flex ds-items-center ds-gap-4 ds-select-none ds-group ds-text-button-md ds-px-6 ds-rounded-[30px] ds-text-black ds-bg-bg-gray disabled:ds-text-inactive-gray disabled:ds-cursor-not-allowed"
  disabled=""
  type="button"
>
  <span
    class="ds-py-[10px]"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button with an icon on the left side 1`] = `
<button
  class="ds-flex ds-items-center ds-gap-4 ds-select-none ds-group ds-text-button-md ds-px-6 ds-rounded-[30px] ds-pl-4 ds-text-black ds-bg-bg-gray hover:ds-text-accent focus-visible:ds-text-accent active:ds-bg-accent focus-visible:ds-outline-accent focus-visible:ds-outline focus-visible:ds-outline-[3px] focus-visible:ds-outline-offset-[1.5px] active:ds-text-white active:ds-outline-0"
  type="button"
>
  <span
    aria-hidden="true"
    class="material-symbols-outlined ds-h-fit ds-select-none size-24"
  >
    add
  </span>
  <span
    class="group-hover:ds-underline group-active:ds-no-underline group-focus-visible:ds-no-underline ds-py-[10px]"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button with an icon on the right side 1`] = `
<button
  class="ds-flex ds-items-center ds-gap-4 ds-select-none ds-group ds-text-button-md ds-px-6 ds-rounded-[30px] ds-pr-4 ds-text-black ds-bg-bg-gray hover:ds-text-accent focus-visible:ds-text-accent active:ds-bg-accent focus-visible:ds-outline-accent focus-visible:ds-outline focus-visible:ds-outline-[3px] focus-visible:ds-outline-offset-[1.5px] active:ds-text-white active:ds-outline-0"
  type="button"
>
  <span
    class="group-hover:ds-underline group-active:ds-no-underline group-focus-visible:ds-no-underline ds-py-[10px]"
  >
    Click me
  </span>
  <span
    aria-hidden="true"
    class="material-symbols-outlined ds-h-fit ds-select-none size-24"
  >
    add
  </span>
</button>
`;

exports[`Button > renders the button with the correct label 1`] = `
<button
  class="ds-flex ds-items-center ds-gap-4 ds-select-none ds-group ds-text-button-md ds-px-6 ds-rounded-[30px] ds-text-black ds-bg-bg-gray hover:ds-text-accent focus-visible:ds-text-accent active:ds-bg-accent focus-visible:ds-outline-accent focus-visible:ds-outline focus-visible:ds-outline-[3px] focus-visible:ds-outline-offset-[1.5px] active:ds-text-white active:ds-outline-0"
  type="button"
>
  <span
    class="group-hover:ds-underline group-active:ds-no-underline group-focus-visible:ds-no-underline ds-py-[10px]"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button with the correct size 1`] = `
<button
  class="ds-flex ds-items-center ds-gap-4 ds-select-none ds-group ds-text-button-sm ds-px-6 ds-rounded-[30px] ds-text-black ds-bg-bg-gray hover:ds-text-accent focus-visible:ds-text-accent active:ds-bg-accent focus-visible:ds-outline-accent focus-visible:ds-outline focus-visible:ds-outline-[3px] focus-visible:ds-outline-offset-[1.5px] active:ds-text-white active:ds-outline-0"
  type="button"
>
  <span
    class="group-hover:ds-underline group-active:ds-no-underline group-focus-visible:ds-no-underline ds-py-3"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button with the correct variant 1`] = `
<button
  class="ds-flex ds-items-center ds-gap-4 ds-select-none ds-group ds-text-button-md ds-px-6 ds-rounded-[30px] ds-text-black ds-bg-bg-gray hover:ds-text-accent focus-visible:ds-text-accent active:ds-bg-accent focus-visible:ds-outline-accent focus-visible:ds-outline focus-visible:ds-outline-[3px] focus-visible:ds-outline-offset-[1.5px] active:ds-text-white active:ds-outline-0"
  type="button"
>
  <span
    class="group-hover:ds-underline group-active:ds-no-underline group-focus-visible:ds-no-underline ds-py-[10px]"
  >
    Click me
  </span>
</button>
`;
